fix spacing between header and main

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 main {
-  padding: 7% 5%;
+  margin-top: 64px;
+  padding: 5%;
 }
